--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Tea Cozy</title>
+    <link rel="stylesheet" href="./resources/css/style.css">
   </head>
 
   <body>
-
 <!--Header Section -->
 
     <div class="header">
@@ -22,56 +22,54 @@
 
   <!--Main container -->
 
-        <div class="main">
+    <div class="main">
 
-        <div id="Mission">
-          <h2>Our Mission</h2>
-          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+  <!-- Mission <section -->
 
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg" alt="Background">
+        <div id="mission">
+          <div class="content">
+            <h2>Our Mission</h2>
+            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+          </div>
         </div>
-      </div>
-        </div>
+
 
 <!--Featured Teas Section -->
 
       <div id="Featured">
-        <div class="content">
-          <h2>Tea of the Month</h2>
-          <h4>What's Steeping at The Tea Cozy?</h4>
+            <h2><center>Tea of the Month</center></h2>
+            <h4><center>What's Steeping at The Tea Cozy?</center></h4>
 
-      <div class="flex-container items">
-        <div class="item">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="Berry Blitz">
-            <span>Fall Berry Blitz Tea</span>
-        </div>
+          <div class="flex-container items">
+            <div class="item">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="Berry Blitz">
+                <span>Fall Berry Blitz Tea</span>
+            </div>
 
-          <div class="item">
-            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="Spiced Rum Tea">
-            <span>Spiced Rum Tea</span>
+              <div class="item">
+                <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+                <span>Spiced Rum Tea</span>
+              </div>
+
+              <div class="item">
+                <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="Donut">
+                <span>Seasonal Donuts</span>
+              </div>
+
+            <div class="item">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+              <span>Myrtle Ave Tea</span>
+            </div>
+
+            <div class="item">
+              <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+              <span>Bedford Bizarre Tea</span>
+            </div>
           </div>
-
-          <div class="item">
-            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="Donut">
-            <span>Seasonal Donuts</span>
-          </div>
-
-        <div class="item">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
-          <span>Myrtle Ave Tea</span>
         </div>
-
-        <div class="item">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
-          <span>Bedford Bizarre Tea</span>
-        </div>
-
-      </div>
-        </div>
-      </div>
 
 <!-- Locations Section -->
-      <div class="locations">
+      <div id="locations">
         <h2>Locations</h2>
 
       <div class="flex-container locations">
@@ -98,18 +96,18 @@
       </div>
       </div>
 
-<!-- Footer -->
-    <div class="footer">
+<!-- Contact Section -->
       <div class="contact">
         <h2>The Tea Cozy</h2>
-        <p>contact@theteacozy.com</p>
-        <p>917-555-8904</p>
+        <h5><a href="contact@theteacozy.com">contact@theteacozy.com</a></h5>
+        <h5>917-555-8904</h5>
       </div>
 
+<!-- Footer -->
+
       <div class="copyright">
-        Copyright The Tea Cozy 2017
+        <img src="./resources/images/copyright-symbol-clipart.png" alt="Copyright">Copyright The Tea Cozy 2017
       </div>
-    </div>
 
   </body>
 </html>
